SONAR-15574 improving the code quality